--- a/index.html
+++ b/index.html
@@ -33,10 +33,31 @@
         <a class="nav-link" href="#welcome">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#signups">Sign Up</a>
+        <a class="nav-link" href="#signups">Sign-Ups</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#shop">Bartholomew's Shop</a>
+        <a class="nav-link" href="#shop">The Shop</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#about">About the Show</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#playing">Joining the Show</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#fanart">"Fan Art"</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#heroes">Heroes of DnDTime</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#items">Magic of DnDTime</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#players">Players of DnDTime</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#faq">FAQ</a>
       </li>
     </ul>
   </div>
