--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a class="nav-link" href="#playing">Joining the Show</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#fanart">"Fan Art"</a>
+        <a class="nav-link" href="#fanart">Fan Art</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#heroes">Heroes of DnDTime</a>
