--- a/index.html
+++ b/index.html
@@ -30,34 +30,34 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#welcome">Home</a>
+        <a class="nav-link" href="#welcome" onclick="setTimeout(loadContent, 200);">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#signups">Sign-Ups</a>
+        <a class="nav-link" href="#signups" onclick="setTimeout(loadContent, 200);">Sign-Ups</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#shop">The Shop</a>
+        <a class="nav-link" href="#shop" onclick="setTimeout(loadContent, 200);">The Shop</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#about">About the Show</a>
+        <a class="nav-link" href="#about" onclick="setTimeout(loadContent, 200);">About the Show</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#playing">Joining the Show</a>
+        <a class="nav-link" href="#playing" onclick="setTimeout(loadContent, 200);">Joining the Show</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#fanart">Fan Art</a>
+        <a class="nav-link" href="#fanart" onclick="setTimeout(loadContent, 200);">Fan Art</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#heroes">Heroes of DnDTime</a>
+        <a class="nav-link" href="#heroes" onclick="setTimeout(loadContent, 200);">Heroes of DnDTime</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#items">Magic of DnDTime</a>
+        <a class="nav-link" href="#items" onclick="setTimeout(loadContent, 200);">Magic of DnDTime</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#players">Players of DnDTime</a>
+        <a class="nav-link" href="#players" onclick="setTimeout(loadContent, 200);">Players of DnDTime</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#faq">FAQ</a>
+        <a class="nav-link" href="#faq" onclick="setTimeout(loadContent, 200);">FAQ</a>
       </li>
     </ul>
   </div>
