--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <script crossorigin="anonymous" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js">
   </script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <link href="/graphics/favicon.png" rel="icon" type="image/png">
-  <link href="dndtime.css" rel="stylesheet">
+  <link href="/assets/favicon.png" rel="icon" type="image/png">
+  <link href="/assets/dndtime.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript">
   </script>
   <link href="/nanogallery2/dist/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
