--- a/index.html
+++ b/index.html
@@ -1,67 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome to DnDTime</title>
-  <meta charset="UTF-8">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" rel="stylesheet">
-  <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js">
-  </script>
-  <script crossorigin="anonymous" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js">
-  </script>
-  <script crossorigin="anonymous" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js">
-  </script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <title>Pete & Jeremy's DnDTime</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="/assets/favicon.png" rel="icon" type="image/png">
   <link href="/assets/dndtime.css" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript">
-  </script>
-  <link href="/nanogallery2/dist/css/nanogallery2.min.css" rel="stylesheet" type="text/css">
-  <script src="/nanogallery2/dist/jquery.nanogallery2.min.js" type="text/javascript">
-  </script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body onload="loadContent()">
- <!-- Navbar -->
-  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Pete & Jeremy's DnDTime</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#welcome" onclick="setTimeout(loadContent, 200);">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#signups" onclick="setTimeout(loadContent, 200);">Sign-Ups</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#shop" onclick="setTimeout(loadContent, 200);">The Shop</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#about" onclick="setTimeout(loadContent, 200);">About the Show</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#playing" onclick="setTimeout(loadContent, 200);">Joining the Show</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#fanart" onclick="setTimeout(loadContent, 200);">Fan Art</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#heroes" onclick="setTimeout(loadContent, 200);">Heroes of DnDTime</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#items" onclick="setTimeout(loadContent, 200);">Magic of DnDTime</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#players" onclick="setTimeout(loadContent, 200);">Players of DnDTime</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#faq" onclick="setTimeout(loadContent, 200);">FAQ</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+<!-- Navbar -->
+<div class="topnav" id="myTopnav">
+  <a href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+  <a href="javascript:void(0);" class="icon" onclick="navFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
+<!-- End Navbar -->
+<a class="nav-link" href="#welcome" onclick="setTimeout(loadContent, 200);">Home</a>
 <!-- End Navbar -->
 <!-- Title Area & Audio Player -->
     <div class="TitleFont" style="line-height: 90%; margin-top: 75px;">
@@ -120,6 +78,17 @@
 		  xhttp.send();
 		}
 		</script>
+    // Navbar Function
+    <script>
+		function navFunction() {
+		  var x = document.getElementById("myTopnav");
+		    if (x.className === "topnav") {
+          x.className += " responsive";
+		    } else {
+          x.className = "topnav";
+		    }
+		}
+    </script>
 	</div>
 </body>
 </html>
