--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body onload="loadContent()">
 <!-- Navbar -->
 <div class="topnav" id="myTopnav">
-  <a href="#welcome" onclick="setTimeout(loadContent, 200);>Home</a>
-  <a href="#signups" onclick="setTimeout(loadContent, 200);>Sign Up</a>
-  <a href="#shop" onclick="setTimeout(loadContent, 200);>Bartholomew's Shop</a>
-  <a href="#about" onclick="setTimeout(loadContent, 200);>About DnDTime</a>
-  <a href="#playing" onclick="setTimeout(loadContent, 200);>Play in DnDTime</a>
-  <a href="#fanart" onclick="setTimeout(loadContent, 200);>Fan Art</a>
-  <a href="#heroes" onclick="setTimeout(loadContent, 200);>Heroes of DnDTime</a>
-  <a href="#items" onclick="setTimeout(loadContent, 200);>Magic of DnDTime</a>
-  <a href="#players" onclick="setTimeout(loadContent, 200);>Our Players</a>
-  <a href="#faq" onclick="setTimeout(loadContent, 200);>FAQ</a>
+  <a href="#welcome" onclick="setTimeout(loadContent, 200);">Home</a>
+  <a href="#signups" onclick="setTimeout(loadContent, 200);">Sign Up</a>
+  <a href="#shop" onclick="setTimeout(loadContent, 200);">Bartholomew's Shop</a>
+  <a href="#about" onclick="setTimeout(loadContent, 200);">About DnDTime</a>
+  <a href="#playing" onclick="setTimeout(loadContent, 200);">Play in DnDTime</a>
+  <a href="#fanart" onclick="setTimeout(loadContent, 200);">Fan Art</a>
+  <a href="#heroes" onclick="setTimeout(loadContent, 200);">Heroes of DnDTime</a>
+  <a href="#items" onclick="setTimeout(loadContent, 200);">Magic of DnDTime</a>
+  <a href="#players" onclick="setTimeout(loadContent, 200);">Our Players</a>
+  <a href="#faq" onclick="setTimeout(loadContent, 200);">FAQ</a>
   <a href="javascript:void(0);" class="icon" onclick="navFunction()">
     <i class="fa fa-bars"></i>
   </a>
