--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</div><br>
 	<div style="text-align: center; font-size: 10px">
 		Pete and Jeremy's DnDTime Theme Song<br>
-		<audio controls="" id="audioplayer"><source src="/Music/Pete%20and%20Jeremy's%20DnDTime%20Theme%20Song.mp3" type="audio/mp3"></audio>
+		<audio controls="" id="audioplayer"><source src="/assets/PJDnDTimeTheme.mp3" type="audio/mp3"></audio>
 	</div><br>
 	<!-- Start Page content -->
 	<div id="DnDTimeAjaxObject" style="margin-right: 10%; margin-left: 10%;">
