--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>Pete & Jeremy's DnDTime</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="/assets/favicon.png" rel="icon" type="image/png">
-  <link href="/assets/dndtime.css" rel="stylesheet">
+  <link href="assets/favicon.png" rel="icon" type="image/png">
+  <link href="assets/dndtime.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body onload="loadContent()">
