--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Spectral+SC:700|Spectral:400,400i,600,600i" rel="stylesheet">
 </head>
-<body onload="loadContent()" style="background-image: url("assets/bg.jpg") !important;">
+<body onload="loadContent()">
 	<div class="topnav" id="topnavigationbar">
 		<a href="#welcome" onclick="setTimeout(loadContent, 200);">Home</a><a href="#signups" onclick="setTimeout(loadContent, 200);">Sign Up</a><a href="#shop" onclick="setTimeout(loadContent, 200);">Bartholomew's Shop</a><a href="#about" onclick="setTimeout(loadContent, 200);">About DnDTime</a><a href="#playing" onclick="setTimeout(loadContent, 200);">Play in DnDTime</a><a href="#fanart" onclick="setTimeout(loadContent, 200);">Fan Art</a><a href="#heroes" onclick="setTimeout(loadContent, 200);">Heroes of DnDTime</a><a href="#items" onclick="setTimeout(loadContent, 200);">Magic of DnDTime</a><a href="#players" onclick="setTimeout(loadContent, 200);">Our Players</a><a href="#faq" onclick="setTimeout(loadContent, 200);">FAQ</a><a class="icon" href="javascript:void(0);" onclick="navFunction()"><i class="fa fa-bars"></i></a>
 	</div>
