--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		Pete and Jeremy's DnDTime - Theme Music<br>
 		<audio controls="" id="audioplayer"><source src="/assets/PJDnDTimeTheme.mp3" type="audio/mp3"></audio>
 	</div><!-- Start Page content -->
-	<div id="DnDTimeAjaxObject" style="margin-top: 15px;">
+	<div id="DnDTimeAjaxObject" style="margin-top: 15px;" class="paper">
 		<div>
 			<div class="HeadFont">
 				Welcome to Pete and Jeremy's DnDTime
