--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</div>
 	<div style="text-align: center; font-size: 10px; margin-top: 5px;">
 		Pete and Jeremy's DnDTime - Theme Music<br>
-		<audio controls="" id="audioplayer"><source src="/assets/PJDnDTimeTheme.mp3" type="audio/mp3"></audio>
+		<audio controls="" id="audioplayer"><source src="assets/PJDnDTimeTheme.mp3" type="audio/mp3"></audio>
 	</div><!-- Start Page content -->
 	<div id="DnDTimeAjaxObject" style="margin-top: 15px;" class="paper">
 		<div>
