--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 	<div class="topnav" id="topnavigationbar">
 		<a href="#welcome" onclick="setTimeout(loadContent, 200);">Home</a><a href="#signups" onclick="setTimeout(loadContent, 200);">Sign Up</a><a href="#shop" onclick="setTimeout(loadContent, 200);">Bartholomew's Shop</a><a href="#about" onclick="setTimeout(loadContent, 200);">About DnDTime</a><a href="#playing" onclick="setTimeout(loadContent, 200);">Play in DnDTime</a><a href="#fanart" onclick="setTimeout(loadContent, 200);">Fan Art</a><a href="#heroes" onclick="setTimeout(loadContent, 200);">Heroes of DnDTime</a><a href="#items" onclick="setTimeout(loadContent, 200);">Magic of DnDTime</a><a href="#players" onclick="setTimeout(loadContent, 200);">Our Players</a><a href="#faq" onclick="setTimeout(loadContent, 200);">FAQ</a><a class="icon" href="javascript:void(0);" onclick="navFunction()"><i class="fa fa-bars"></i></a>
 	</div>
-	<div class="TitleFont" style="line-height: 90%; padding-top: 10px;">
+	<div class="paper" style="padding-top: 10px;">
+	<div class="TitleFont" style="line-height: 90%;">
 		PETE AND JEREMY'S DNDTIME
 	</div>
 	<div style="text-align: center; font-size: 10px; margin-top: 5px;">
 		Pete and Jeremy's DnDTime - Theme Music<br>
 		<audio controls="" id="audioplayer"><source src="assets/PJDnDTimeTheme.mp3" type="audio/mp3"></audio>
 	</div><!-- Start Page content -->
-	<div id="DnDTimeAjaxObject" style="margin-top: 15px;" class="paper">
+	<div id="DnDTimeAjaxObject" style="margin-top: 15px;">
 		<div>
 			<div class="HeadFont">
 				Welcome to Pete and Jeremy's DnDTime
@@ -53,6 +54,7 @@
 			<br>
 		</div>
 	</div><!-- End Page content -->
+	</div>
 	<script>
 	// Load Content
 	function loadContent() {
