--- a/index.html
+++ b/index.html
@@ -13,70 +13,47 @@
 		<a href="#welcome" onclick="setTimeout(loadContent, 200);">Home</a><a href="#signups" onclick="setTimeout(loadContent, 200);">Sign Up</a><a href="#shop" onclick="setTimeout(loadContent, 200);">Bartholomew's Shop</a><a href="#about" onclick="setTimeout(loadContent, 200);">About DnDTime</a><a href="#playing" onclick="setTimeout(loadContent, 200);">Play in DnDTime</a><a href="#fanart" onclick="setTimeout(loadContent, 200);">Fan Art</a><a href="#heroes" onclick="setTimeout(loadContent, 200);">Heroes of DnDTime</a><a href="#items" onclick="setTimeout(loadContent, 200);">Magic of DnDTime</a><a href="#players" onclick="setTimeout(loadContent, 200);">Our Players</a><a href="#faq" onclick="setTimeout(loadContent, 200);">FAQ</a><a class="icon" href="javascript:void(0);" onclick="navFunction()"><i class="fa fa-bars"></i></a>
 	</div>
 	<div class="paper" style="margin-top: 10px;">
-	<div class="TitleFont" style="line-height: 90%;">
-		PETE AND JEREMY'S DNDTIME
-	</div>
-	<div style="text-align: center; font-size: 10px; margin-top: 5px;">
-		Pete and Jeremy's DnDTime - Theme Music<br>
-		<audio controls="" id="audioplayer"><source src="assets/PJDnDTimeTheme.mp3" type="audio/mp3"></audio>
-	</div><!-- Start Page content -->
-	<div id="DnDTimeAjaxObject" style="margin-top: 15px;">
-		<div>
-			<div class="HeadFont">
-				Welcome to Pete and Jeremy's DnDTime
-			</div><br>
-			<br>
-			<div class="BodyFont">
-				We are a Dungeons and Dragons live stream starring you, the viewer! We air every Friday at 9:00 PM EST on Twitch.TV. Check out our community Discord server, Twitch.TV channel, Roll20 LFG posting, and social media links below. We use Discord as our primary means of communication, so check out the #announcements text channel for updates!
-			</div><br>
-			<hr>
-			<br>
-			<a href="https://discord.gg/u3sMTvJ"><img alt="Join on Discord" src="/Graphics/Discord.png"></a> <a href="https://www.twitch.tv/dndtime"><img alt="Follow on Twitch.TV" src="/Graphics/TwitchTV.png"></a> <a href="https://app.roll20.net/lfg/listing/77757/pete-and-jeremys-d-and-d-time"><img alt="Join on Roll20" src="/Graphics/Roll20.png"></a> <a href="https://twitter.com/dnd_time"><img alt="Follow on Twitter" src="/Graphics/Twitter.png"></a><br>
-			<hr>
-			<br>
-			<div class="HeadFont">
-				About Us
-			</div><br>
-			<br>
-			<div class="BodyFont">
-				Pete and Jeremy are two average guys who love table top RPGs, like Dungeons & Dragons. We see tabletop role playing games as a unique medium to explore the process of collaborative storytelling. We created this show, Pete and Jeremy's DnDTime, because we wanted to share our love for Dungeons & Dragons with our viewers and directly engage them in the storytelling process in a way that conventional live-streams can't.<br>
-				<br>
+		<h1>PETE AND JEREMY'S DNDTIME</h1>
+		<p class="music">Pete and Jeremy's DnDTime - Theme Music<br>
+		<audio controls="" id="audioplayer"><source src="assets/PJDnDTimeTheme.mp3" type="audio/mp3"></audio></p>
+		<div class="DnDTimeAjaxObject" id="DnDTimeAjaxObject">
+			<div>
+				<h2>Welcome to Pete and Jeremy's DnDTime</h2>
+				<p>We are a Dungeons and Dragons live stream starring you, the viewer! We air every Friday at 9:00 PM EST on Twitch.TV. Check out our community Discord server, Twitch.TV channel, Roll20 LFG posting, and social media links below. We use Discord as our primary means of communication, so check out the #announcements text channel for updates!</p>
 				<hr>
-				<br>
-				Conventional Dungeons & Dragons live-streams are long-form campaigns with a consistent cast of characters and long-term overarching plots.<br>
-				<br>
-				DnDTime is not. Instead, it is made up of three, unrelated, one-hour-long adventures with a cast of players drawn from our audience. This unique format allows for an unorthodox style of play that promotes creativity, improvisation, and a diverse cast of characters. The rapidly changing cast and lack of continuity keeps things fresh and allows us to take greater narrative risks in our storytelling.<br>
-				<br>
+				<h2>About Us</h2>
+				<pre>Pete and Jeremy are two average guys who love table top RPGs, like Dungeons & Dragons. We see tabletop role playing games as a unique medium to explore the process of collaborative storytelling. We created this show, Pete and Jeremy's DnDTime, because we wanted to share our love for Dungeons & Dragons with our viewers and directly engage them in the storytelling process in a way that conventional live-streams can't.
 				<hr>
-				<br>
+				Conventional Dungeons & Dragons live-streams are long-form campaigns with a consistent cast of characters and long-term overarching plots.
+				DnDTime is not. Instead, it is made up of three, unrelated, one-hour-long adventures with a cast of players drawn from our audience. This unique format allows for an unorthodox style of play that promotes creativity, improvisation, and a diverse cast of characters. The rapidly changing cast and lack of continuity keeps things fresh and allows us to take greater narrative risks in our storytelling.
+				<hr>
 				Since we've started the stream, DnDTime has grown into a real community of players and Dungeon Masters who all share a love for Dungeons and Dragons. We're a friendly and open community, and we sincerely hope that you'll think about being a part of it.
-			</div><br>
-			<br>
-		</div>
-	</div><!-- End Page content -->
+				</pre>
+			</div>
+		</div><!-- End Page content -->
 	</div>
 	<script>
-	// Load Content
-	function loadContent() {
-		var dynamicContent = location.hash.substr(1);
-		var xhttp = new XMLHttpRequest();
-		xhttp.onreadystatechange = function() {
-			if (this.readyState == 4 && this.status == 200) {
-				document.getElementById("DnDTimeAjaxObject").innerHTML = this.responseText;
-			}
-		};
-		xhttp.open("GET", dynamicContent + ".txt", true);
-		xhttp.send();
-	}
-	// Navbar Function
-	function navFunction() {
-		var x = document.getElementById("topnavigationbar");
-		if (x.className === "topnav") {
-			x.className += " responsive";
-		} else {
-			x.className = "topnav";
-		}
-	}
+	   // Load Content
+	   function loadContent() {
+	       var dynamicContent = location.hash.substr(1);
+	       var xhttp = new XMLHttpRequest();
+	       xhttp.onreadystatechange = function() {
+	           if (this.readyState == 4 && this.status == 200) {
+	               document.getElementById("DnDTimeAjaxObject").innerHTML = this.responseText;
+	           }
+	       };
+	       xhttp.open("GET", dynamicContent + ".txt", true);
+	       xhttp.send();
+	   }
+	   // Navbar Function
+	   function navFunction() {
+	       var x = document.getElementById("topnavigationbar");
+	       if (x.className === "topnav") {
+	           x.className += " responsive";
+	       } else {
+	           x.className = "topnav";
+	       }
+	   }
 	</script>
 </body>
 </html>
