--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<h1>PETE AND JEREMY'S DNDTIME</h1>
 		<p class="music">Pete and Jeremy's DnDTime - Theme Music<br>
 		<audio controls="" id="audioplayer"><source src="assets/PJDnDTimeTheme.mp3" type="audio/mp3"></audio></p>
-		<div class="DnDTimeAjaxObject" id="DnDTimeAjaxObject">
+		<div id="DnDTimeAjaxObject">
 			<div>
 				<h2>Welcome to Pete and Jeremy's DnDTime</h2>
 				<p>
