--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		<audio controls="" id="audioplayer"><source src="assets/PJDnDTimeTheme.mp3" type="audio/mp3"></audio></p>
 		<div id="DnDTimeAjaxObject">
 			<div>
+				<div id="twitch-embed"></div>
+				<script src="https://embed.twitch.tv/embed/v1.js"></script>
 				<h2>Welcome to Pete and Jeremy's DnDTime</h2>
 				<p>
 					We are a Dungeons and Dragons live stream starring you, the viewer! We air every Friday at 9:00 PM EST on Twitch.TV. Check out our community Discord server, Twitch.TV channel, Roll20 LFG posting, and social media links below. We use Discord as our primary means of communication, so check out the #announcements text channel for updates!
@@ -59,6 +61,13 @@
 	           x.className = "topnav";
 	       }
 	   }
+	</script>
+	<script type="text/javascript">
+		new Twitch.Embed("twitch-embed", {
+			width: 100%,
+			height: 100%,
+			channel: "dndtime"
+		});
 	</script>
 </body>
 </html>
