--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			}
 		}
 		window.onscroll = function() {stickyNav()};
-		var navbar = document.getElementById("topnavigationbar");
+		var topnavigationbar = document.getElementById("topnavigationbar");
 		var sticky = topnavigationbar.offsetTop;
 		function stickyNav() {
 			If (window.pageYOffset >= sticky) {
