--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		var topnavigationbar = document.getElementById("topnavigationbar");
 		var sticky = topnavigationbar.offsetTop;
 		function stickyNav() {
-			If (window.pageYOffset >= sticky) {
+			if (window.pageYOffset >= sticky) {
 				topnavigationbar.classList.add("sticky")
 			} else {
 				topnavigationbar.classList.remove("sticky");
