--- a/stream/dndtpj-data.html
+++ b/stream/dndtpj-data.html
@@ -5,15 +5,15 @@
 <style>
 @font-face {
   font-family: "NodestoCaps";
-  src: url("/Fonts/Nodesto%20Caps%20Condensed%20Bold.woff2") format("woff2"), url("/Fonts/Nodesto%20Caps%20Condensed%20Bold.woff") format("woff");
+  src: url("/assets/NodestoCapsCondensedBold.woff2") format("woff2");
 }
 @font-face {
   font-family: "ScalySansCapsBold";
-  src: url("/Fonts/Scaly%20Sans%20Caps%20Bold.woff2") format("woff2"), url("/Fonts/Scaly%20Sans%20Caps%20Bold.woff") format("woff");
+  src: url("/assets/Scaly%20Sans%20Caps%20Bold.woff2") format("woff2");
 }
 @font-face {
   font-family: "ZatannaMisdirection";
-  src: url("/Fonts/Zatanna%20Misdirection.woff2") format("woff2"), url("/Fonts/Zatanna%20Misdirection.woff") format("woff");
+  src: url("/assets/Zatanna%20Misdirection.woff2") format("woff2");
 }
 .AdvName {
   font-family: NodestoCaps;
