--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="assets/favicon.png" rel="icon" type="image/png">
 	<link href="assets/dndtime.css" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Spectral+SC:700|Spectral:400,400i,600,600i" rel="stylesheet">
 </head>
 <body onload="loadContent()">
