--- a/index.html
+++ b/index.html
@@ -17,46 +17,57 @@
 		<p class="music">Pete and Jeremy's DnDTime - Theme Music<br>
 		<audio controls="" id="audioplayer"><source src="assets/PJDnDTimeTheme.mp3" type="audio/mp3"></audio></p>
 		<div id="DnDTimeAjaxObject">
-			<h2>Welcome to Pete and Jeremy's DnDTime</h2>
-			<p>We are a Dungeons and Dragons live stream starring you, the viewer! We air every Friday at 9:00 PM EST on Twitch.TV. Check out our community Discord server, Twitch.TV channel, Roll20 LFG posting, and social media links below. We use Discord as our primary means of communication, so check out the #announcements text channel for updates!</p>
-			<h2>About Us</h2>
-			<p>Pete and Jeremy are two average guys who love table top RPGs, like Dungeons & Dragons. We see tabletop role playing games as a unique medium to explore the process of collaborative storytelling. We created this show, Pete and Jeremy's DnDTime, because we wanted to share our love for Dungeons & Dragons with our viewers and directly engage them in the storytelling process in a way that conventional live-streams can't.</p>
-			<p>Conventional Dungeons & Dragons live-streams are long-form campaigns with a consistent cast of characters and long-term overarching plots.
-				<br>DnDTime is not. Instead, it is made up of three, unrelated, one-hour-long adventures with a cast of players drawn from our audience. This unique format allows for an unorthodox style of play that promotes creativity, improvisation, and a diverse cast of characters. The rapidly changing cast and lack of continuity keeps things fresh and allows us to take greater narrative risks in our storytelling.</p>
-			<p>Since we've started the stream, DnDTime has grown into a real community of players and Dungeon Masters who all share a love for Dungeons and Dragons. We're a friendly and open community, and we sincerely hope that you'll think about being a part of it.</p>
+			<h2>Welcome to DnDTime!</h2>
+<p>DnDTime is a Twitch.tv channel and Discord community dedicated to 5th Edition Dungeons & Dragons (D&D). Our premier show, <strong>Pete & Jeremy's DnDTime</strong>, is a series of self-contained, one-shot adventures featuring our viewers! Head on over to <a href="#playing" onclick="setTimeout(loadContent, 200);">Playing in DnDTime</a> to learn more about the game, then <a href="#signups" onclick="setTimeout(loadContent, 200);">sign up to play</a>! We use Discord as our primary means of communication and Roll20 for all dice rolling and character management.</p><br>
+<div class="fabbox">
+<div><a href="https://twitch.tv/dndtime" style="color:#6441A4"><i class="fab fa-twitch"></i></a></div>
+<div><a href="https://discord.gg/u3sMTvJ" style="color:#7289DA"><i class="fab fa-discord"></i></a></div>
+<div><a href="https://twitter.com/DnD_Time" style="color:#1DA1F2"><i class="fab fa-twitter"></i></a></div>
+<div><a href="https://www.youtube.com/channel/UCgRhAXT4KEzPhPGhU_BBsSA" style="color:#FF0000"><i class="fab fa-youtube"></i></a></div>
+<div><a href="https://app.roll20.net/lfg/listing/77757/"><i class="fab"><img class="r20" src="assets/roll20.png"></i></a></div>
+</div>
+<h2>Our Content</h2>
+<p>We stream all sorts of D&D-related content throughout the week!</p>
+<p><strong>DnDTime Talks.</strong>A talkshow where Pete and Jeremy discuss all things D&D! Each show runs one hour and covers topics ranging from book reviews, to player and dungeon master advice. Wednesdays at 6:30 PM PT - Weekly.</p>
+<p><strong>Pete & Jeremy's DnDTime.</strong> Self-contained, one-shot adventures featuring our viewers! Each adventure runs no longer than one and a half hours, and there are three adventures each week. Adventures are completely self-contained and follow no particular storyline. Fridays at 6:00 PM PT - Weekly.</p>
+<p><strong>DnDTime Behind the Screen.</strong> Learn to prepare simple and engaging one-shot adventures using Roll20! Each show runs about two hours. Jeremy walks through converting 4th Edition <a href="http://www.dmsguild.com/product/110211/">Dungeon Delve</a> adventures for 5th Edition D&D, and sets up the adventure in Roll20. Saturdays at 1:00 PM PT - Two shows per month see the weekly schedule on Discord.</p>
+<p><strong>DnDTime Delves.</strong> Good old-fashioned one-shot dungeon crawl adventures! Each adventure runs between three and four hours. Jeremy runs a cast of four characters through the adventures prepped in <strong>DnDTime Behind the Screen</strong>. Games are self-contained and quite deadly. Sundays at 6:00 PM PT - Two shows per month see the weekly schedule on Discord.</p>
+<p><strong>DnDTime Brews.</strong> Creating high quality homebrew for <strong>Pete & Jeremy's DnDTime</strong>! Each show runs between two and three hours. Pete and Jeremy hang out with the twitch chat and brew new character options, such as races, subclasses, or spells. Sundays at 6:00 PM PT - Two shows per month see the weekly schedule on Discord.</p> 
+
 		</div><!-- End Page content -->
 	</div>
 	<script>
-		// Load Content
-		function loadContent() {
-			var dynamicContent = location.hash.substr(1);
-			var xhttp = new XMLHttpRequest();
-			xhttp.onreadystatechange = function() {
-				if (this.readyState == 4 && this.status == 200) {
-					document.getElementById("DnDTimeAjaxObject").innerHTML = this.responseText;
-					showhide();
-				}
-			};
-			xhttp.open("GET", dynamicContent + ".txt", true);
-			xhttp.send();
-		}
-		// Navbar FunctionS
-		function navFunction() {
-			var x = document.getElementById("topnavigationbar");
-			if (x.className === "topnav") {
-				x.className += " responsive";
-			} else {
-				x.className = "topnav";
-			}
-		}
-		function showhide() {
-			var d = new Date();
-			var dd = d.getDay();
-			var signupON = document.getElementById('signupEnabled');
-			var signupOFF = document.getElementById('signupDisabled');
-			signupON.style.display = (signupON.style.display == 'block') && ((dd == 4) || (dd == 5) || (dd == 6)) ? 'none' : 'block';
-			signupOFF.style.display = (signupOFF.style.display == 'none') && ((dd == 4) || (dd == 5) || (dd == 6)) ? 'block' : 'none';
-		}
+	       // Load Content
+	       function loadContent() {
+	       	var dynamicContent = location.hash.substr(1);
+	       	var xhttp = new XMLHttpRequest();
+	       	xhttp.onreadystatechange = function() {
+	       		if (this.readyState == 4 && this.status == 200) {
+	       			document.getElementById("DnDTimeAjaxObject").innerHTML = this.responseText;
+	       			showhide();
+	       		}
+	       	};
+	       	xhttp.open("GET", dynamicContent + ".txt", true);
+	       	xhttp.send();
+	       }
+	       // Navbar FunctionS
+	       function navFunction() {
+	       	var x = document.getElementById("topnavigationbar");
+	       	if (x.className === "topnav") {
+	       		x.className += " responsive";
+	       	} else {
+	       		x.className = "topnav";
+	       	}
+	       }
+
+	       function showhide() {
+	       	var d = new Date();
+	       	var dd = d.getDay();
+	       	var signupON = document.getElementById('signupEnabled');
+	       	var signupOFF = document.getElementById('signupDisabled');
+	       	signupON.style.display = (signupON.style.display == 'block') && ((dd == 4) || (dd == 5) || (dd == 6)) ? 'none' : 'block';
+	       	signupOFF.style.display = (signupOFF.style.display == 'none') && ((dd == 4) || (dd == 5) || (dd == 6)) ? 'block' : 'none';
+	       }
 	</script>
 </body>
 </html>
