--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 			<p><strong>DnDTime Brews.</strong> Creating high quality homebrew for <strong>Pete & Jeremy's DnDTime</strong>! Each show runs between two and three hours. Pete and Jeremy hang out with the twitch chat and brew new character options, such as races, subclasses, or spells. Sundays at 6:00 PM PT - Two shows per month see the weekly schedule on Discord.</p>
 		</div><!-- End Page content -->
 	</div>
+	<div style="height:100%; width: 100px;>
+	</div>
 	<script>
 	          // Load Content
 	          function loadContent() {
